@@ -5,8 +5,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - forking under Apache::Registry, exit vs CORE::exit 
 
-- DirectoryIndex breaks now that we accept DIR_MAGIC_TYPE
-
 - PerlInitHandler broken?
 
 - files that have been created after the server's (child?) startup are
@@ -271,6 +269,8 @@ OPTIMIZATIONS
 - replace Apache::Registry with Apache::RegistryXS
 
 - make Apache::RegistryLoader work with RegistryXS
+
+- avoid a copy in PerlRunXS (use SvPVX instead of safemalloc'd copy)
 
 - XS_IMPORT=1 on by default
 
